--- a/index.html
+++ b/index.html
@@ -18,22 +18,25 @@
 <body>
   <!-- HEADER -->
   <header class="header">
-    <nav class="site-nav">
-      <a class="logo link" href="" lang="en">Web<span class="logo-black">Studio</span></a>
-      <ul class="menu list">
-        <li class="menu-item">
-          <a class="menu-link current link" href="./index.html">Студия</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link link" href="./portfolio.html">Портфолио</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link link" href="">Контакты</a>
-        </li>
-      </ul>
-    </nav>
-    <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a class="tel-link link" href="tel:+380961111111">+38 096 111 11</a>
+    <div class="container header-container">
+      <nav class="site-nav">
+        <a class="logo link" href="" lang="en">Web<span class="logo-black">Studio</span></a>
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-link current link" href="./index.html">Студия</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+    </div>
+
   </header>
 
   <main>
