skills flex add

--- a/index.html
+++ b/index.html
@@ -48,53 +48,58 @@
 
     <!-- SKILLS -->
     <section class="skills">
-      <h2 hidden>Преимущества</h2>
-      <ul class="skills-menu list">
-        <li class="skills-item">
-          <h3 class="skills-title">Внимание к деталям</h3>
-          <p class="skills-text">
-            Идейные соображения, а также начало повседневной работы по
-            формированию позиции.
-          </p>
-        </li>
-        <li class="skills-item">
-          <h3 class="skills-title">Пунктуальность</h3>
-          <p class="skills-text">
-            Задача организации, в особенности же рамки и место обучения кадров
-            влечет за собой.
-          </p>
-        </li>
-        <li class="skills-item">
-          <h3 class="skills-title">Планирование</h3>
-          <p class="skills-text">
-            Равным образом консультация с широким активом в значительной
-            степени обуславливает.
-          </p>
-        </li>
-        <li class="skills-item">
-          <h3 class="skills-title">Современные технологии</h3>
-          <p class="skills-text">
-            Значимость этих проблем настолько очевидна, что реализация
-            плановых заданий.
-          </p>
-        </li>
-      </ul>
+      <div class="skills-section-list container">
+        <h2 hidden>Преимущества</h2>
+        <ul class="skills-menu list">
+          <li class="skills-item">
+            <h3 class="skills-title">Внимание к деталям</h3>
+            <p class="skills-text">
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li class="skills-item">
+            <h3 class="skills-title">Пунктуальность</h3>
+            <p class="skills-text">
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li class="skills-item">
+            <h3 class="skills-title">Планирование</h3>
+            <p class="skills-text">
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li class="skills-item">
+            <h3 class="skills-title">Современные технологии</h3>
+            <p class="skills-text">
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </div>
+
     </section>
 
     <!-- ABOUT -->
     <section>
-      <h2 class="about-title">Чем мы занимаемся</h2>
-      <ul class="about-menu list">
-        <li class="about-item">
-          <img src="./images/about/type.jpg" alt="набор текста" width="370" height="294" />
-        </li>
-        <li class="about-item">
-          <img src="./images/about/seach.jpg" alt="поиск информации" width="370" height="294" />
-        </li>
-        <li class="about-item">
-          <img src="./images/about/color.jpg" alt="выбор цвета" width="370" height="294" />
-        </li>
-      </ul>
+      <div>
+        <h2 class="about-title">Чем мы занимаемся</h2>
+        <ul class="about-menu list">
+          <li class="about-item">
+            <img src="./images/about/type.jpg" alt="набор текста" width="370" height="294" />
+          </li>
+          <li class="about-item">
+            <img src="./images/about/seach.jpg" alt="поиск информации" width="370" height="294" />
+          </li>
+          <li class="about-item">
+            <img src="./images/about/color.jpg" alt="выбор цвета" width="370" height="294" />
+          </li>
+        </ul>
+      </div>
     </section>
 
     <!-- TEAM -->
