--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     </section>
 
     <!-- SKILLS -->
-    <section class="skills">
-      <div class="skills-section-list container">
+    <section class="section">
+      <div class="skills container">
         <h2 hidden>Преимущества</h2>
         <ul class="skills-menu list">
           <li class="skills-item">
@@ -81,12 +81,11 @@
           </li>
         </ul>
       </div>
-
     </section>
 
     <!-- ABOUT -->
-    <section>
-      <div>
+    <section class="about-section">
+      <div class="container">
         <h2 class="about-title">Чем мы занимаемся</h2>
         <ul class="about-menu list">
           <li class="about-item">
@@ -103,30 +102,40 @@
     </section>
 
     <!-- TEAM -->
-    <section class="team">
-      <h3 class="team-title">Наша команда</h3>
-      <ul class="team-menu list">
-        <li>
-          <img class="team-image" src="./images/team/ihor.jpg" alt="Игорь" width="270" height="260" />
-          <h3 class="team-name">Игорь Демьяненко</h3>
-          <p class="team-prof">Product Designer</p>
-        </li>
-        <li>
-          <img class="team-image" src="./images/team/olha.jpg" alt="Ольга" width="270" height="260" />
-          <h3 class="team-name">Ольга Репина</h3>
-          <p class="team-prof">Frontend Developer</p>
-        </li>
-        <li>
-          <img class="team-image" src="./images/team/nikola.jpg" alt="Николай" width="270" height="260" />
-          <h3 class="team-name">Николай Тарасов</h3>
-          <p class="team-prof">Marketing</p>
-        </li>
-        <li>
-          <img class="team-image" src="./images/team/michael.jpg" alt="Михаил" width="270" height="260" />
-          <h3 class="team-name">Михаил Ермаков</h3>
-          <p class="team-prof">UI Designer</p>
-        </li>
-      </ul>
+    <section class="team-section section">
+      <div class="team container">
+        <h3 class="team-title">Наша команда</h3>
+        <ul class="team-menu list">
+          <li class="team-list">
+            <img class="team-image" src="./images/team/ihor.jpg" alt="Игорь" width="270" height="260" />
+            <div class="team-desc">
+              <h3 class="team-name">Игорь Демьяненко</h3>
+              <p class="team-prof">Product Designer</p>
+            </div>
+          </li>
+          <li class="team-list">
+            <img class="team-image" src="./images/team/olha.jpg" alt="Ольга" width="270" height="260" />
+            <div class="team-desc">
+              <h3 class="team-name">Ольга Репина</h3>
+              <p class="team-prof">Frontend Developer</p>
+            </div>
+          </li>
+          <li class="team-list">
+            <img class="team-image" src="./images/team/nikola.jpg" alt="Николай" width="270" height="260" />
+            <div class="team-desc">
+              <h3 class="team-name">Николай Тарасов</h3>
+              <p class="team-prof">Marketing</p>
+            </div>
+          </li>
+          <li class="team-list">
+            <img class="team-image" src="./images/team/michael.jpg" alt="Михаил" width="270" height="260" />
+            <div class="team-desc">
+              <h3 class="team-name">Михаил Ермаков</h3>
+              <p class="team-prof">UI Designer</p>
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
 
