--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
       <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
     </div>
-
   </header>
 
   <main>
@@ -141,21 +140,24 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <a class="logo link" href="" lang="en">Web<span class="logo-white">Studio</span></a>
-    <address>
-      <ul class="list">
-        <li>
-          <a class="location link" href="https://goo.gl/maps/hZrBAjfU1j6jD1Ma9" target="_blank"
-            rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
-        </li>
-        <li>
-          <a class="footer-mail link" href="mailto:info@example.com">info@example.com</a>
-        </li>
-        <li>
-          <a class="footer-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
-    </address>
+    <div class="container">
+      <a class="logo link" href="" lang="en">Web<span class="logo-white">Studio</span></a>
+      <address>
+        <ul class="list">
+          <li>
+            <a class="location link" href="https://goo.gl/maps/hZrBAjfU1j6jD1Ma9" target="_blank"
+              rel="noopener noreferrer">г.
+              Киев, пр-т Леси Украинки, 26</a>
+          </li>
+          <li>
+            <a class="footer-mail link" href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li>
+            <a class="footer-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </div>
   </footer>
 </body>
 
