--- a/portfolio.html
+++ b/portfolio.html
@@ -13,27 +13,29 @@
 <body>
   <!-- HEADER -->
   <header class="header">
-    <nav class="site-nav">
-      <a class="logo link" href="" lang="en">Web<span class="logo-black">Studio</span></a>
-      <ul class="menu list">
-        <li class="menu-item">
-          <a class="menu-link link" href="./index.html">Студия</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link current link" href="./portfolio.html">Портфолио</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link link" href="">Контакты</a>
-        </li>
-      </ul>
-    </nav>
+    <div class="container header-container">
+      <nav class="site-nav">
+        <a class="logo link" href="" lang="en">Web<span class="logo-black">Studio</span></a>
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-link link" href="./index.html">Студия</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link current link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Контакты</a>
+          </li>
+        </ul>
+      </nav>
       <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a class="tel-link link" href="tel:+380961111111">+38 096 111 11</a>
+      <a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+    </div>
   </header>
 
   <main>
     <!-- BUTTONS -->
-    <section class="buttons">
+    <section class="buttons section">
       <ul class="btn-menu list">
         <li><button class="btn-list current" type="button">Все</button></li>
         <li><button class="btn-list" type="button">Веб-сайты</button></li>
@@ -43,7 +45,7 @@
       </ul>
 
       <!-- PICTURES LIST -->
-      <ul class="list clas">
+      <ul class="list">
         <li class="portfolio-item">
           <img src="./images/portfolio/laptop.jpg" alt="laptop" width="370" height="295" />
           <h3 class="port-title">Технокряк</h3>
@@ -95,21 +97,24 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <a class="logo link" href="" lang="en">Web<span class="logo-white">Studio</span></a>
-    <address>
-      <ul class="list">
-        <li>
-          <a class="location link" href="https://goo.gl/maps/hZrBAjfU1j6jD1Ma9" target="_blank"
-            rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
-        </li>
-        <li>
-          <a class="footer-mail link" href="mailto:info@example.com">info@example.com</a>
-        </li>
-        <li>
-          <a class="footer-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
-    </address>
+    <div class="container">
+      <a class="logo link" href="" lang="en">Web<span class="logo-white">Studio</span></a>
+      <address>
+        <ul class="list">
+          <li>
+            <a class="location link" href="https://goo.gl/maps/hZrBAjfU1j6jD1Ma9" target="_blank"
+              rel="noopener noreferrer">г.
+              Киев, пр-т Леси Украинки, 26</a>
+          </li>
+          <li>
+            <a class="footer-mail link" href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li>
+            <a class="footer-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </div>
   </footer>
 </body>
 
