--- a/portfolio.html
+++ b/portfolio.html
@@ -36,62 +36,91 @@
   <main>
     <!-- BUTTONS -->
     <section class="buttons section">
-      <ul class="btn-menu list">
-        <li><button class="btn-list current" type="button">Все</button></li>
-        <li><button class="btn-list" type="button">Веб-сайты</button></li>
-        <li><button class="btn-list" type="button">Приложения</button></li>
-        <li><button class="btn-list" type="button">Дизайн</button></li>
-        <li><button class="btn-list" type="button">Маркетинг</button></li>
-      </ul>
+      <div class="container">
+        <ul class="btn-menu list">
+          <li class="btn-item"><button class="btn-list current" type="button">Все</button></li>
+          <li class="btn-item"><button class="btn-list" type="button">Веб-сайты</button></li>
+          <li class="btn-item"><button class="btn-list" type="button">Приложения</button></li>
+          <li class="btn-item"><button class="btn-list" type="button">Дизайн</button></li>
+          <li class="btn-item"><button class="btn-list" type="button">Маркетинг</button></li>
+        </ul>
 
-      <!-- PICTURES LIST -->
-      <ul class="list">
-        <li class="portfolio-item">
-          <img src="./images/portfolio/laptop.jpg" alt="laptop" width="370" height="295" />
-          <h3 class="port-title">Технокряк</h3>
-          <p class="port-text">Веб-сайт</p>
-        </li>
-        <li class="portfolio-item">
-          <img src="./images/portfolio/game.jpg" alt="game" width="370" height="295" />
-          <h3 class="port-title">Постер New Orlean vs Golden Star</h3>
-          <p class="port-text">Дизайн</p>
-        </li>
-        <li class="portfolio-item">
-          <img src="./images/portfolio/seafood.jpg" alt="seafood" width="370" height="295" />
-          <h3 class="port-title">Ресторан Seafood</h3>
-          <p class="port-text">Приложение</p>
-        </li>
-        <li class="portfolio-item">
-          <img src="./images/portfolio/headphones.jpg" alt="headphones" width="370" height="295" />
-          <h3 class="port-title">Проект Prime</h3>
-          <p class="port-text">Маркетинг</p>
-        </li>
-        <li class="portfolio-item">
-          <img src="./images/portfolio/box.jpg" alt="box" width="370" height="295" />
-          <h3 class="port-title">Проект Boxes</h3>
-          <p class="port-text">Приложение</p>
-        </li>
-        <li class="portfolio-item">
-          <img src="./images/portfolio/monitor.jpg" alt="monitor" width="370" height="295" />
-          <h3 class="port-title">Inspiration has no Borders</h3>
-          <p class="port-text">Веб-сайт</p>
-        </li>
-        <li class="portfolio-item">
-          <img src="./images/portfolio/magazine.jpg" alt="magazine" width="370" height="295" />
-          <h3 class="port-title">Издание Limited Edition</h3>
-          <p class="port-text">Дизайн</p>
-        </li>
-        <li class="portfolio-item">
-          <img src="./images/portfolio/lab.jpg" alt="lab" width="370" height="295" />
-          <h3 class="port-title">Проект LAB</h3>
-          <p class="port-text">Маркетинг</p>
-        </li>
-        <li class="portfolio-item">
-          <img src="./images/portfolio/type.jpg" alt="type" width="370" height="295" />
-          <h3 class="port-title">Growing Business</h3>
-          <p class="port-text">Приложение</p>
-        </li>
-      </ul>
+        <!-- PICTURES LIST -->
+        <ul class="port-list list">
+          <li class="portfolio-item">
+            <img src="./images/portfolio/laptop.jpg" alt="laptop" width="370" height="295" />
+            <div class="port-item-desc">
+              <h3 class="port-title">Технокряк</h3>
+              <p class="port-text">Веб-сайт</p>
+            </div>
+
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/portfolio/game.jpg" alt="game" width="370" height="295" />
+            <div class="port-item-desc">
+              <h3 class="port-title">Постер New Orlean vs Golden Star</h3>
+              <p class="port-text">Дизайн</p>
+            </div>
+
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/portfolio/seafood.jpg" alt="seafood" width="370" height="295" />
+            <div class="port-item-desc">
+              <h3 class="port-title">Ресторан Seafood</h3>
+              <p class="port-text">Приложение</p>
+            </div>
+
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/portfolio/headphones.jpg" alt="headphones" width="370" height="295" />
+            <div class="port-item-desc">
+              <h3 class="port-title">Проект Prime</h3>
+              <p class="port-text">Маркетинг</p>
+            </div>
+
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/portfolio/box.jpg" alt="box" width="370" height="295" />
+            <div class="port-item-desc">
+              <h3 class="port-title">Проект Boxes</h3>
+              <p class="port-text">Приложение</p>
+            </div>
+
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/portfolio/monitor.jpg" alt="monitor" width="370" height="295" />
+            <div class="port-item-desc">
+              <h3 class="port-title">Inspiration has no Borders</h3>
+              <p class="port-text">Веб-сайт</p>
+            </div>
+
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/portfolio/magazine.jpg" alt="magazine" width="370" height="295" />
+            <div class="port-item-desc">
+              <h3 class="port-title">Издание Limited Edition</h3>
+              <p class="port-text">Дизайн</p>
+            </div>
+
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/portfolio/lab.jpg" alt="lab" width="370" height="295" />
+            <div class="port-item-desc">
+              <h3 class="port-title">Проект LAB</h3>
+              <p class="port-text">Маркетинг</p>
+            </div>
+
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/portfolio/type.jpg" alt="type" width="370" height="295" />
+            <div class="port-item-desc">
+              <h3 class="port-title">Growing Business</h3>
+              <p class="port-text">Приложение</p>
+            </div>
+
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
 
