--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <footer class="footer">
     <div class="container">
       <a class="logo link" href="" lang="en">Web<span class="logo-white">Studio</span></a>
-      <address>
+      <address class="footer-adress">
         <ul class="list">
           <li>
             <a class="location link" href="https://goo.gl/maps/hZrBAjfU1j6jD1Ma9" target="_blank"
