--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
   <main>
     <!-- BUTTONS -->
     <section class="buttons section">
-      <div class="container">
+      <div class="port-section container">
         <ul class="btn-menu list">
           <li class="btn-item"><button class="btn-list current" type="button">Все</button></li>
           <li class="btn-item"><button class="btn-list" type="button">Веб-сайты</button></li>
@@ -128,7 +128,7 @@
   <footer class="footer">
     <div class="container">
       <a class="logo link" href="" lang="en">Web<span class="logo-white">Studio</span></a>
-      <address>
+      <address class="footer-adress">
         <ul class="list">
           <li>
             <a class="location link" href="https://goo.gl/maps/hZrBAjfU1j6jD1Ma9" target="_blank"
